新增获取事件 API
